# python_flow_demo

./: README.md  pyproject.toml
scripts/: run_pipeline.py  test_logger.py
src/etl/common/: logger.py
src/etl/pipelines/step1_aggregate/: pipeline.py
